--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
 </head>
-<body>
-  <div class="page">
+<body class="page">
+  <header class="header">
+    <div class="block block_key_value">
 
+    </div>
+    <div class="header__title">
+
+    </div>
+    <div class="header__subtitle">
+
+    </div>
+    <div class="header__link">
+
+    </div>
+    <div class="header__main-illustration">
+
+    </div>
+    <div class="header__square-pic">
+
+    </div>
+  </header>
   </div>
 </body>
 </html>
