--- a/index.html
+++ b/index.html
@@ -3,29 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./styles/style.css">
+  <link rel="stylesheet" type="text/css" href="./styles/normalize.css">
   <title>Научиться учиться</title>
 </head>
-<body class="page">
-  <header class="header">
-    <div class="block block_key_value">
+<body>
+  <div class="page">
+    <header class="header">
+      <div class="logo logo_place_header"></div>
+      <div class="header__title">
+        <p>Научиться учиться</p>
+      </div>
+      <div class="header__subtitle">
+        <p>Какие современные и эффективные подходы к
+          обучению вы можете использовать в своей жизни?</p>
+        <span>
+          <a href="#" class="header__link">Узнать&rarr;</a>
+        </span>
+      </div>
+      <div class="header__main-illustration">
+        <img src="./images/header-image.png" alt="main-illustration">
 
-    </div>
-    <div class="header__title">
+      </div>
+      <div class="header__square-pic">
 
-    </div>
-    <div class="header__subtitle">
-
-    </div>
-    <div class="header__link">
-
-    </div>
-    <div class="header__main-illustration">
-
-    </div>
-    <div class="header__square-pic">
-
-    </div>
-  </header>
+      </div>
+    </header>
   </div>
 </body>
 </html>
