--- a/index.html
+++ b/index.html
@@ -23,12 +23,71 @@
       </div>
       <div class="header__main-illustration">
         <img src="./images/header-image.png" alt="main-illustration">
-
       </div>
       <div class="header__square-pic">
-
       </div>
     </header>
+    <main class="content">
+      <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief"><h4>Главные проблемы в обучении</h4></div>
+          <div class="two-columns__main-text">
+            <div class="two-columns__paragraph"><p>Ни в школе, ни в институте нас не учат тому,
+              как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся
+              решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам
+              реального знания. Зубрежка быстро выветривается и не приносит пользы.</p></div>
+            <div class="two-columns__paragraph centered-block"><p><span class="two-columns__span-accent">Вывод:</span>
+               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p></div>
+            <div class="two-columns__paragraph"><p>Конкретные техники и упражнения помогают изменить
+               подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются
+                на примере обучения в Практикуме.</p></div>
+          </div>
+        </div>
+      </section>
+      <section class="digits">
+        <div class="section-title"><h1>Цифры и факты</h1></div>
+        <div class="section-subtitle"><h3>Про учёбу и мозг</h3></div>
+        <div class="table">
+          <div class="table__cell">
+            <div class="table__heading"><h3>86 миллиардов</h3></div>
+            <div class="table__text"><p>Число нейронов в мозге человека</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3>2.1 миллиарда</h3></div>
+            <div class="table__text"><p>Число нуждающихся в повышении квалификации</p>
+            <p>Всемирный Банк, 2017</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3>1000 терабайт</h3></div>
+            <div class="table__text"><p>Объём памяти человека</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3>500 триллионов</h3></div>
+            <div class="table__text"><p>Число ответственных за обучение
+              нервных синапсов у взрослого человека</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3>420 миллионов</h3></div>
+            <div class="table__text">
+              <p>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p>Всемирный Банк, 2017</p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3>17–20 лет</h3></div>
+            <div class="table__text"><p>Пик обучаемости</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3>1885 год</h3></div>
+            <div class="table__text"><p>Открытие кривой забывания</p></div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading"><h3>1889 год</h3></div>
+            <div class="table__text"><p>Открытие условного рефлекса</p></div>
+          </div>
+        </div>
+      </section>
+    </main>
   </div>
 </body>
 </html>
