--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./styles/style.css">
-  <link rel="stylesheet" type="text/css" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -17,9 +17,7 @@
       <div class="header__subtitle">
         <p>Какие современные и эффективные подходы к
           обучению вы можете использовать в своей жизни?</p>
-        <span>
           <a href="#" class="header__link">Узнать&rarr;</a>
-        </span>
       </div>
       <div class="header__main-illustration">
         <img src="./images/header-image.png" alt="main-illustration">
@@ -30,64 +28,249 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <div class="two-columns__brief"><h4>Главные проблемы в обучении</h4></div>
+          <div class="two-columns__brief">
+            <h4>Главные проблемы в обучении</h4>
+          </div>
           <div class="two-columns__main-text">
-            <div class="two-columns__paragraph"><p>Ни в школе, ни в институте нас не учат тому,
+            <div class="two-columns__paragraph">
+              <p>Ни в школе, ни в институте нас не учат тому,
               как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся
               решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам
-              реального знания. Зубрежка быстро выветривается и не приносит пользы.</p></div>
-            <div class="two-columns__paragraph centered-block"><p><span class="two-columns__span-accent">Вывод:</span>
-               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p></div>
-            <div class="two-columns__paragraph"><p>Конкретные техники и упражнения помогают изменить
+              реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            </div>
+            <div class="two-columns__paragraph centered-block">
+              <p><span class="two-columns__span-accent">Вывод:</span>
+               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            </div>
+            <div class="two-columns__paragraph">
+              <p>Конкретные техники и упражнения помогают изменить
                подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются
-                на примере обучения в Практикуме.</p></div>
+                на примере обучения в Практикуме.</p>
+            </div>
           </div>
         </div>
       </section>
       <section class="digits">
-        <div class="section-title"><h1>Цифры и факты</h1></div>
-        <div class="section-subtitle"><h3>Про учёбу и мозг</h3></div>
+        <div class="section-title">
+          <h1>Цифры и факты</h1>
+        </div>
+        <div class="section-subtitle">
+          <h3>Про учёбу и мозг</h3>
+        </div>
         <div class="table">
           <div class="table__cell">
-            <div class="table__heading"><h3>86 миллиардов</h3></div>
-            <div class="table__text"><p>Число нейронов в мозге человека</p></div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading"><h3>2.1 миллиарда</h3></div>
-            <div class="table__text"><p>Число нуждающихся в повышении квалификации</p>
-            <p>Всемирный Банк, 2017</p></div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading"><h3>1000 терабайт</h3></div>
-            <div class="table__text"><p>Объём памяти человека</p></div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading"><h3>500 триллионов</h3></div>
-            <div class="table__text"><p>Число ответственных за обучение
-              нервных синапсов у взрослого человека</p></div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading"><h3>420 миллионов</h3></div>
+            <div class="table__heading">
+              <h3>86 миллиардов</h3>
+            </div>
             <div class="table__text">
-              <p>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p>Число нейронов в мозге человека</p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">
+              <h3>2.1 миллиарда</h3>
+            </div>
+            <div class="table__text">
+              <p>Число нуждающихся в повышении квалификации</p>
+            </div>
+            <div class="table__text">
               <p>Всемирный Банк, 2017</p>
             </div>
           </div>
           <div class="table__cell">
-            <div class="table__heading"><h3>17–20 лет</h3></div>
-            <div class="table__text"><p>Пик обучаемости</p></div>
+            <div class="table__heading">
+              <h3>1000 терабайт</h3>
+            </div>
+            <div class="table__text">
+              <p>Объём памяти человека</p>
+            </div>
           </div>
           <div class="table__cell">
-            <div class="table__heading"><h3>1885 год</h3></div>
-            <div class="table__text"><p>Открытие кривой забывания</p></div>
+            <div class="table__heading">
+              <h3>500 триллионов</h3>
+            </div>
+            <div class="table__text">
+              <p>Число ответственных за обучение
+              нервных синапсов у взрослого человека</p>
+            </div>
           </div>
           <div class="table__cell">
-            <div class="table__heading"><h3>1889 год</h3></div>
-            <div class="table__text"><p>Открытие условного рефлекса</p></div>
+            <div class="table__heading">
+              <h3>420 миллионов</h3>
+            </div>
+            <div class="table__text">
+              <p>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            </div>
+            <div class="table__text">
+              <p>Всемирный Банк, 2017</p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">
+              <h3>17–20 лет</h3>
+            </div>
+            <div class="table__text">
+              <p>Пик обучаемости</p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">
+              <h3>1885 год</h3>
+            </div>
+            <div class="table__text">
+              <p>Открытие кривой забывания</p>
+            </div>
+          </div>
+          <div class="table__cell">
+            <div class="table__heading">
+              <h3>1889 год</h3>
+            </div>
+            <div class="table__text">
+              <p>Открытие условного рефлекса</p>
+            </div>
           </div>
         </div>
       </section>
+      <section class="feynman">
+        <div class="feynman__title">
+          <h1>Метод Фейнмана</h1>
+        </div>
+        <div class="feynman__subtitle">
+          <h3>Выучить и не забыть.</h3>
+        </div>
+        <div>
+          <a href="#" class="feynman__link">Подробнее&rarr;</a>
+        </div>
+      </section>
+      <section class="kaufman">
+        <div class="section-title section-title_theme_dark">
+          <h1>Принципы обучения</h1>
+        </div>
+        <div class="section-subtitle section-subtitle_theme_dark">
+          <h3>от Джоша Кауфмана</h3>
+        </div>
+        <div class="table table_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">
+              <h3>1</h3>
+            </div>
+            <div class="table__text table__text_theme_dark">
+              <p>Выберите привлекательный проект.</p>
+            </div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">
+              <h3>2</h3>
+            </div>
+            <div class="table__text table__text_theme_dark">
+              <p>Сосредоточьтесь на каком-то одном навыке.</p>
+            </div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">
+              <h3>3</h3>
+            </div>
+            <div class="table__text table__text_theme_dark">
+              <p>Определите целевой уровень мастерства.</p>
+            </div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">
+              <h3>4</h3>
+            </div>
+            <div class="table__text table__text_theme_dark">
+              <p>Разбейте навык на элементы.</p>
+            </div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">
+              <h3>5</h3>
+            </div>
+            <div class="table__text table__text_theme_dark">
+              <p>Приготовьте всё необходимое для занятий.</p>
+            </div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">
+              <h3>6</h3>
+            </div>
+            <div class="table__text table__text_theme_dark">
+              <p>Устраните препятствия для занятий.</p>
+            </div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">
+              <h3>7</h3>
+            </div>
+            <div class="table__text table__text_theme_dark">
+              <p>Выделите специальное время для занятий.</p>
+            </div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">
+              <h3>8</h3>
+            </div>
+            <div class="table__text table__text_theme_dark">
+              <p>Создайте быстрые петли обратной связи.</p>
+            </div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">
+              <h3>9</h3>
+            </div>
+            <div class="table__text table__text_theme_dark">
+              <p>Занимайтесь по расписанию, короткими интенсивными
+                 интервалами.</p>
+            </div>
+          </div>
+          <div class="table__cell table__cell_theme_dark">
+            <div class="table__heading table__heading_theme_dark">
+              <h3>10</h3>
+            </div>
+            <div class="table__text table__text_theme_dark">
+              <p>Уделяйте внимание количеству и скорости.</p>
+            </div>
+          </div>
+          <div class="kaufman_triangle"></div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <div class="footer__author">
+            <p>&copy; Виктор Абанькин</p>
+          </div>
+        </div>
+        <div class="footer__column_content_info">
+          <div class="footer__column-heading">
+            <p>О Практикуме</p>
+          </div>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#">Главная</a>
+            <a class="footer__column-link" href="#">Концепция</a>
+            <a class="footer__column-link" href="#">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column_content_social">
+          <div class="footer__column-heading">
+            <p>Соцсети</p>
+          </div>
+          <div class="footer__column-links">
+            <a class="footer__column-link" href="#">
+              <img src="./youtube-icon.svg" alt="youtube-icon">YouTube
+            </a>
+            <a class="footer__column-link" href="#">
+              <img src="./images/vk_color_white.svg" alt="vk-icon">ВКонтакте
+            </a>
+            <a class="footer__column-link" href="#">
+              <img src="./tiktok-icon.svg" alt="tiktok-icon">TikTok
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
