--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="#" class="header__link">Узнать&rarr;</a>
       </div>
       <div class="header__main-illustration">
-        <img src="./images/header-image.png" alt="main-illustration">
+        <img src="./images/header-image.png" alt="Яндекс Практикум">
       </div>
       <div class="header__square-pic">
       </div>
@@ -259,13 +259,13 @@
           </div>
           <div class="footer__column-links">
             <a class="footer__column-link" href="#">
-              <img src="./youtube-icon.svg" alt="youtube-icon">YouTube
+              <img src="./youtube-icon.svg" alt="Иконка YouTube">YouTube
             </a>
             <a class="footer__column-link" href="#">
-              <img src="./images/vk_color_white.svg" alt="vk-icon">ВКонтакте
+              <img src="./images/vk_color_white.svg" alt="Иконка ВКонтакте">ВКонтакте
             </a>
             <a class="footer__column-link" href="#">
-              <img src="./tiktok-icon.svg" alt="tiktok-icon">TikTok
+              <img src="./tiktok-icon.svg" alt="Иконка TikTok">TikTok
             </a>
           </div>
         </div>
