--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
-      <div class="header__title">
-        <p>Научиться учиться</p>
-      </div>
+      <p class="header__title">Научиться учиться</p>
       <div class="header__subtitle">
         <p>Какие современные и эффективные подходы к
           обучению вы можете использовать в своей жизни?</p>
@@ -231,19 +229,17 @@
               <p>Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
-          <div class="kaufman_triangle"></div>
+          <div class="kaufman__triangle"></div>
         </div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <div class="footer__author">
-            <p>&copy; Виктор Абанькин</p>
-          </div>
+          <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
-        <div class="footer__column_content_info">
+        <div class="footer__column footer__column_content_info">
           <div class="footer__column-heading">
             <p>О Практикуме</p>
           </div>
@@ -253,7 +249,7 @@
             <a class="footer__column-link" href="#">Наставники</a>
           </div>
         </div>
-        <div class="footer__column_content_social">
+        <div class="footer__column footer__column_content_social">
           <div class="footer__column-heading">
             <p>Соцсети</p>
           </div>
