--- a/index.html
+++ b/index.html
@@ -236,34 +236,31 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <div class="logo logo_place_footer"></div>
+          <div class="logo logo_place_footer">
+          </div>
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
         <div class="footer__column footer__column_content_info">
-          <div class="footer__column-heading">
-            <p>О Практикуме</p>
-          </div>
-          <div class="footer__column-links">
-            <a class="footer__column-link" href="#">Главная</a>
-            <a class="footer__column-link" href="#">Концепция</a>
-            <a class="footer__column-link" href="#">Наставники</a>
-          </div>
+            <p class="footer__column-heading">О Практикуме</p>
+          <ul class="footer__column-links">
+            <li><a class="footer__column-link" href="#">Главная</a></li>
+            <li><a class="footer__column-link" href="#">Концепция</a></li>
+            <li><a class="footer__column-link" href="#">Наставники</a></li>
+          </ul>
         </div>
         <div class="footer__column footer__column_content_social">
-          <div class="footer__column-heading">
-            <p>Соцсети</p>
-          </div>
-          <div class="footer__column-links">
-            <a class="footer__column-link" href="#">
+            <p class="footer__column-heading">Соцсети</p>
+          <ul class="footer__column-links">
+            <li><a class="footer__column-link" href="#">
               <img src="./youtube-icon.svg" alt="Иконка YouTube">YouTube
-            </a>
-            <a class="footer__column-link" href="#">
+            </a></li>
+            <li><a class="footer__column-link" href="#">
               <img src="./images/vk_color_white.svg" alt="Иконка ВКонтакте">ВКонтакте
-            </a>
-            <a class="footer__column-link" href="#">
+            </a></li>
+            <li><a class="footer__column-link" href="#">
               <img src="./tiktok-icon.svg" alt="Иконка TikTok">TikTok
-            </a>
-          </div>
+            </a></li>
+          </ul>
         </div>
       </div>
     </footer>
