--- a/index.html
+++ b/index.html
@@ -3,234 +3,132 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header"></div>
-      <p class="header__title">Научиться учиться</p>
-      <div class="header__subtitle">
-        <p>Какие современные и эффективные подходы к
-          обучению вы можете использовать в своей жизни?</p>
-          <a href="#" class="header__link">Узнать&rarr;</a>
-      </div>
-      <div class="header__main-illustration">
-        <img src="./images/header-image.png" alt="Яндекс Практикум">
-      </div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к
+        обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__link" target="_blank">Узнать&rarr;</a></p>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Яндекс Практикум">
       <div class="header__square-pic">
       </div>
     </header>
     <main class="content">
-      <section class="description">
-        <div class="two-columns">
-          <div class="two-columns__brief">
-            <h4>Главные проблемы в обучении</h4>
-          </div>
+      <section class="description" aria-label="две колонки">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
-            <div class="two-columns__paragraph">
-              <p>Ни в школе, ни в институте нас не учат тому,
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому,
               как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся
               решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам
               реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            </div>
-            <div class="two-columns__paragraph centered-block">
-              <p><span class="two-columns__span-accent">Вывод:</span>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>
                учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            </div>
-            <div class="two-columns__paragraph">
-              <p>Конкретные техники и упражнения помогают изменить
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить
                подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются
                 на примере обучения в Практикуме.</p>
-            </div>
           </div>
         </div>
-      </section>
+      </article>
       <section class="digits">
-        <div class="section-title">
-          <h1>Цифры и факты</h1>
-        </div>
-        <div class="section-subtitle">
-          <h3>Про учёбу и мозг</h3>
-        </div>
-        <div class="table">
-          <div class="table__cell">
-            <div class="table__heading">
-              <h3>86 миллиардов</h3>
-            </div>
-            <div class="table__text">
-              <p>Число нейронов в мозге человека</p>
-            </div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">
-              <h3>2.1 миллиарда</h3>
-            </div>
-            <div class="table__text">
-              <p>Число нуждающихся в повышении квалификации</p>
-            </div>
-            <div class="table__text">
-              <p>Всемирный Банк, 2017</p>
-            </div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">
-              <h3>1000 терабайт</h3>
-            </div>
-            <div class="table__text">
-              <p>Объём памяти человека</p>
-            </div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">
-              <h3>500 триллионов</h3>
-            </div>
-            <div class="table__text">
-              <p>Число ответственных за обучение
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение
               нервных синапсов у взрослого человека</p>
-            </div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">
-              <h3>420 миллионов</h3>
-            </div>
-            <div class="table__text">
-              <p>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            </div>
-            <div class="table__text">
-              <p>Всемирный Банк, 2017</p>
-            </div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">
-              <h3>17–20 лет</h3>
-            </div>
-            <div class="table__text">
-              <p>Пик обучаемости</p>
-            </div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">
-              <h3>1885 год</h3>
-            </div>
-            <div class="table__text">
-              <p>Открытие кривой забывания</p>
-            </div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">
-              <h3>1889 год</h3>
-            </div>
-            <div class="table__text">
-              <p>Открытие условного рефлекса</p>
-            </div>
-          </div>
-        </div>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
       <section class="feynman">
-        <div class="feynman__title">
-          <h1>Метод Фейнмана</h1>
-        </div>
-        <div class="feynman__subtitle">
-          <h3>Выучить и не забыть.</h3>
-        </div>
-        <div>
-          <a href="#" class="feynman__link">Подробнее&rarr;</a>
-        </div>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link" target="_blank">Подробнее&rarr;</a>
       </section>
       <section class="kaufman">
-        <div class="section-title section-title_theme_dark">
-          <h1>Принципы обучения</h1>
-        </div>
-        <div class="section-subtitle section-subtitle_theme_dark">
-          <h3>от Джоша Кауфмана</h3>
-        </div>
-        <div class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">
-              <h3>1</h3>
-            </div>
-            <div class="table__text table__text_theme_dark">
-              <p>Выберите привлекательный проект.</p>
-            </div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">
-              <h3>2</h3>
-            </div>
-            <div class="table__text table__text_theme_dark">
-              <p>Сосредоточьтесь на каком-то одном навыке.</p>
-            </div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">
-              <h3>3</h3>
-            </div>
-            <div class="table__text table__text_theme_dark">
-              <p>Определите целевой уровень мастерства.</p>
-            </div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">
-              <h3>4</h3>
-            </div>
-            <div class="table__text table__text_theme_dark">
-              <p>Разбейте навык на элементы.</p>
-            </div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">
-              <h3>5</h3>
-            </div>
-            <div class="table__text table__text_theme_dark">
-              <p>Приготовьте всё необходимое для занятий.</p>
-            </div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">
-              <h3>6</h3>
-            </div>
-            <div class="table__text table__text_theme_dark">
-              <p>Устраните препятствия для занятий.</p>
-            </div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">
-              <h3>7</h3>
-            </div>
-            <div class="table__text table__text_theme_dark">
-              <p>Выделите специальное время для занятий.</p>
-            </div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">
-              <h3>8</h3>
-            </div>
-            <div class="table__text table__text_theme_dark">
-              <p>Создайте быстрые петли обратной связи.</p>
-            </div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">
-              <h3>9</h3>
-            </div>
-            <div class="table__text table__text_theme_dark">
-              <p>Занимайтесь по расписанию, короткими интенсивными
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными
                  интервалами.</p>
-            </div>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">
-              <h3>10</h3>
-            </div>
-            <div class="table__text table__text_theme_dark">
-              <p>Уделяйте внимание количеству и скорости.</p>
-            </div>
-          </div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
           <div class="kaufman__triangle"></div>
-        </div>
+        </ul>
       </section>
     </main>
     <footer class="footer">
@@ -241,7 +139,7 @@
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
         <div class="footer__column footer__column_content_info">
-            <p class="footer__column-heading">О Практикуме</p>
+            <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
             <li><a class="footer__column-link" href="#">Главная</a></li>
             <li><a class="footer__column-link" href="#">Концепция</a></li>
@@ -249,16 +147,16 @@
           </ul>
         </div>
         <div class="footer__column footer__column_content_social">
-            <p class="footer__column-heading">Соцсети</p>
+            <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li><a class="footer__column-link" href="#">
-              <img src="./youtube-icon.svg" alt="Иконка YouTube">YouTube
+              <img class="footer__social-icon" src="./youtube-icon.svg" alt="Иконка YouTube">YouTube
             </a></li>
             <li><a class="footer__column-link" href="#">
-              <img src="./images/vk_color_white.svg" alt="Иконка ВКонтакте">ВКонтакте
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка ВКонтакте">ВКонтакте
             </a></li>
             <li><a class="footer__column-link" href="#">
-              <img src="./tiktok-icon.svg" alt="Иконка TikTok">TikTok
+              <img class="footer__social-icon" src="./tiktok-icon.svg" alt="Иконка TikTok">TikTok
             </a></li>
           </ul>
         </div>
