--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются
                 на примере обучения в Практикуме.</p>
           </div>
-        </div>
-      </article>
+        </article>
+      </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
