--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
-          <div class="kaufman__triangle"></div>
+          <li class="kaufman__triangle"></li>
         </ul>
       </section>
     </main>
@@ -138,28 +138,28 @@
           </div>
           <p class="footer__author">&copy; Виктор Абанькин</p>
         </div>
-        <div class="footer__column footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
             <li><a class="footer__column-link" href="#">Главная</a></li>
             <li><a class="footer__column-link" href="#">Концепция</a></li>
             <li><a class="footer__column-link" href="#">Наставники</a></li>
           </ul>
-        </div>
-        <div class="footer__column footer__column_content_social">
+        </nav>
+        <nav class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li><a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="./youtube-icon.svg" alt="Иконка YouTube">YouTube
+              <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Иконка YouTube">YouTube
             </a></li>
             <li><a class="footer__column-link" href="#">
               <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка ВКонтакте">ВКонтакте
             </a></li>
             <li><a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="./tiktok-icon.svg" alt="Иконка TikTok">TikTok
+              <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="Иконка TikTok">TikTok
             </a></li>
           </ul>
-        </div>
+        </nav>
       </div>
     </footer>
   </div>
