--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
           allowfullscreen></iframe>
         </div>
       </section>
-      <section class="oakley">
-        <article class="two-columns">
+      <article class="oakley">
+        <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала
@@ -91,8 +91,8 @@
                 подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом
                 знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
-        </article>
-      </section>
+        </div>
+      </article>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
@@ -139,8 +139,8 @@
           </li>
         </ul>
       </section>
-      <section class="khan">
-        <article class="khan__container">
+      <article class="khan">
+        <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
           <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
@@ -148,12 +148,12 @@
             повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
-        </article>
-        <article class="khan__book-container">
+          </div>
+        <div class="khan__book-container">
           <img class="khan__book-pic" src="images/khan-book.jpg" alt="Книга &laquo;Весь мир — школа&raquo;">
           <a class="khan__buy-link" href="#" target="_blank">Купить книгу&rarr;</a>
-        </article>
-      </section>
+        </div>
+      </article>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
