--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
           <a class="resources__link" href="#" target="_blank">
-            <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Arzamas"></a>
+            <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Арзамас"></a>
           <a class="resources__link" href="#" target="_blank">
-            <img class="resources__logo" src="images/logo/resources-n1.svg" alt="N1"></a>
+            <img class="resources__logo" src="images/logo/resources-n1.svg" alt="Н1"></a>
           <a class="resources__link" href="#" target="_blank">
-            <img class="resources__logo" src="images/logo/resources-strelka.svg" alt="STRELKA"></a>
+            <img class="resources__logo" src="images/logo/resources-strelka.svg" alt="СТРЕЛКА"></a>
           <a class="resources__link" href="#" target="_blank">
             <img class="resources__logo" src="images/logo/resources-polka.svg" alt="ПОЛКА"></a>
         </div>
